--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
         "nunjucks-date": "~1.2.0"
     },
     "author": "Shannon Bradshaw",
-    "license": "0BSD"
+    "license": "0BSD",
+    "scripts": {
+        "start": "node ."
+    }
 }
